<resources>

    <!-- Other -->
    <string name="app_name">Greenhouse Monitor</string>
    <string name="system_label">System</string>
    <string name="overview_label">Overview</string>
    <string name="average_label">Avg: </string>
    <string name="dim_label">Dim: </string>
    <string name="system_data_label">System Data</string>
    <string name="welcome">Welcome!</string>

    <!-- Humidity -->
    <string name="humidity_label">Humidity</string>
    <string name="humidity_current">70%</string>
    <string name="humidity_average">65%</string>

    <!-- Temperature -->
    <string name="temperature_label">Temperature</string>
    <string name="temperature_current">74 F</string>
    <string name="temperature_average">76 F</string>

    <!-- co2 -->
    <string name="CO2_label">CO2 Levels</string>
    <string name="CO2_current">10 ppm</string>
    <string name="CO2_average">12 ppm</string>

    <!-- pH -->
    <string name="pH_label">pH Levels</string>
    <string name="pH_current">8</string>
    <string name="pH_average">7</string>

    <!-- Lights -->
    <string name="light_label">Lights</string>
    <string name="light_current">UV</string>
    <string name="light_dim">100%</string>


    <string name="title_activity_humidity">activity_humidity</string>
    <string name="action_settings">Settings</string>
    <string name="action_shutdown">Shutdown</string>
    <string name="action_exit">Exit</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_graph">Graph</string>
    <string name="tab_table">Table</string>
    <string name="column_time_label">Time</string>
    <string name="column_date_label">Date</string>
    <string name="column_data_label">Average Measurement</string>

    <!-- Emergency Shutdown -->
    <string name="shutdown_label">Shutdown</string>
    <string name="warnign_label">**WARNING**</string>
    <string name="shutdown_warning_message1">Please be sure you want to shutdown the system</string>
    <string name="shutdown_warning_message2">The greenhouse system can NOT be turned back ON from the application</string>
    <string name="shutdown_warning_message3">You will need to access the web application to restart a test</string>
    <string name="shutdown_reassure_user">Are you sure you want to shutdown the system?</string>
    <string name="shutdown_user_agrees">Yes, I\'m sure‌‌‌‌</string>
    <string name="system_feedback">Stopping system</string>

    <!-- Share -->
    <string name="sharing">Sharing</string>
    <string name="share">Share</string>
    <string name="time_share">Time Interval for Data:</string>
    <string name="sensor_share">Sensors Data to Share:</string>
    <string name="All">All</string>
    <string name="Start">Start</string>
    <string name="End">End</string>
    <string name="humidity_sensor">Humidity Sensor</string>
    <string name="temperature_sensor">Temperature Sensor</string>
    <string name="CO2_sensor">CO2 Sensor</string>
    <string name="pH_sensor">pH Sensor</string>
    <string name="lighting_used">Lighting Used</string>
    <string name="data_to_include">Data to Include:</string>
    <string name="include_graphs">Graphs</string>
    <string name="include_table">Tables</string>
    <string name="share_successful">Share Succesful!</string>
    <string name="need_data_format">Please select graphs or tables</string>
    <string name="need_time">Please select a time frame</string>
    <string name="unable_to_share">Please select at least one of the options above!</string>
    <string name="share_time">Set Date/Time</string>
    <string name="from_time">From:</string>
    <string name="to_time">To:</string>
    <string name="time_divider">—</string>
    <string name="bad_year">Please check years selected</string>
    <string name="bad_month">Please check months selected</string>
    <string name="bad_day">Please check days selceted</string>


    <!-- Test -->
    <string name="time1">11:00 AM</string>
    <string name="time2">12:00 PM</string>
    <string name="time3">01:00 PM</string>
    <string name="time4">02:00 PM</string>
    <string name="time5">03:00 PM</string>

    <string name="date1">04/08/18</string>
    <string name="date2">04/08/18</string>
    <string name="date3">04/08/18</string>
    <string name="date4">04/08/18</string>
    <string name="date5">04/08/18</string>

    <string name="data1">70%</string>
    <string name="data2">72%</string>
    <string name="data3">68%</string>
    <string name="data4">70%</string>
    <string name="data5">70%</string>

    <string name="setTime">Set time</string>
    <string name="title_activity_temperature">activity_temperature</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="title_activity__co2">activity_CO2</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_login">Login</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_credentials">Invalid email or password</string>
    <string name="register_message">To register please contact the Greenhouse Administrator</string>

    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_ph">activity_pH</string>


</resources>
