<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.antonio.greenhouse_testapp1.activity_ph$PlaceholderFragment">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        android:stretchColumns="0">

        <TableRow
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp">


            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/column_time_label"
                android:layout_weight="0.30"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/column_date_label"
                android:layout_weight="0.30"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/column_data_label"
                android:layout_weight="0.65"
                />

        </TableRow>

        <TableRow
            android:layout_width="match_parent">


            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/time1"
                android:layout_weight="0.30"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/date1"
                android:layout_weight="0.30"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/data1"
                android:layout_weight="0.65"
                />

        </TableRow>

        <TableRow
            android:layout_width="match_parent">


            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/time2"
                android:layout_weight="0.30"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/date2"
                android:layout_weight="0.30"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/data2"
                android:layout_weight="0.65"
                />

        </TableRow>

        <TableRow
            android:layout_width="match_parent">


            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/time3"
                android:layout_weight="0.30"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/date3"
                android:layout_weight="0.30"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/data3"
                android:layout_weight="0.65"
                />

        </TableRow>

        <TableRow
            android:layout_width="match_parent">


            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/time4"
                android:layout_weight="0.30"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/date4"
                android:layout_weight="0.30"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/data4"
                android:layout_weight="0.65"
                />

        </TableRow>

        <TableRow
            android:layout_width="match_parent">


            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/time5"
                android:layout_weight="0.30"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/date5"
                android:layout_weight="0.30"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/data5"
                android:layout_weight="0.65"
                />

        </TableRow>

    </TableLayout>


</android.support.constraint.ConstraintLayout>