<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.antonio.greenhouse_testapp1.activity_emergency_shutdown"
    android:id="@+id/shutdownParantLayout">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <!-- Title -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="25dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="32sp"
                android:text="@string/shutdown_label"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="32sp"
                android:text="@string/system_label"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/colorBlack"
                android:layout_marginTop="15dp"/>
        </LinearLayout>

        <!-- Warning Start-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/warnign_label"
            android:textAlignment="center"
            android:textColor="@color/colorRed"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shutdown_warning_message1"
            android:textAlignment="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shutdown_warning_message2"
            android:textAlignment="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shutdown_warning_message3"
            android:textAlignment="center"/>
        <!-- Warning End -->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="15dp"
            android:layout_weight="0.5">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/shutdown_round_corners"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:text="@string/shutdown_reassure_user"
                    android:layout_marginTop="10dp"
                    android:layout_weight="0.5"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.3">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/shutdown_user_agrees"
                            android:layout_toStartOf="@+id/text_switch_divider"
                            android:textColor="@color/colorBlack"/>


                        <View
                            android:id="@+id/text_switch_divider"
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:layout_centerInParent="true"
                            android:layout_marginEnd="5dp"/>

                        <Switch
                            android:id="@+id/switch_shutdown"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:layout_toEndOf="@+id/text_switch_divider"/>


                </RelativeLayout>


            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="40dp"
            android:layout_weight="0.6">

            <Button
                android:id="@+id/shutdown_button"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:text="@string/shutdown_label"
                android:textSize="20sp"
                android:enabled="false"
                android:layout_centerHorizontal="true"/>


        </RelativeLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
