<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.antonio.greenhouse_testapp1.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/login_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_login"
                android:layout_centerHorizontal="true"
                android:textSize="38sp"/>

            <ImageView
                android:layout_width="175dp"
                android:layout_height="175dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/login_title"
                android:src="@drawable/tiger"/>

        </RelativeLayout>

        <EditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:focusable = "true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/prompt_email"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/pass_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:focusable = "true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/prompt_password"
            android:layout_marginBottom="20dp"/>

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:text="@string/action_login"/>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
